fixed text alignment

--- a/HW2-npm/src/scss/styles.scss
+++ b/HW2-npm/src/scss/styles.scss
@@ -27,6 +27,10 @@ body {
     max-width: none;
     padding: 20px 320px 20px 20px;
   }
+
+  .table{
+    text-align: right;
+  }
   
   #next{
     margin: 0px 0px 0px 0px;
